# Multi_Hevy_Workout_Dashboard

./: .gitignore  Cargo.toml  README.md
data/: default_exercise_mapping.json
src/: analysis.rs  body_parts.rs  capture.rs  exercise_mapping.rs  exercise_utils.rs  export.rs  main.rs  plotting.rs  report.rs  sync.rs
