[package]
name = "Multi_Hevy_Workout_Dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27"
egui = "0.27"
csv = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
rfd = "0.14"
egui_plot = "0.27"
log = "0.4"
env_logger = "0.11"
egui_extras = { version = "0.27", features = ["chrono"] }
